tests/ui/repr/repr-align.notwin.stderr
error[E0589]: invalid `repr(align)` attribute: not an unsuffixed integer
  --> $DIR/repr-align.rs:8:14
   |
LL | #[repr(align(16.0))]
   |              ^^^^

error[E0589]: invalid `repr(align)` attribute: not a power of two
  --> $DIR/repr-align.rs:11:14
   |
LL | #[repr(align(15))]
   |              ^^

error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> $DIR/repr-align.rs:14:14
   |
LL | #[repr(align(4294967296))]
   |              ^^^^^^^^^^

error[E0589]: invalid `repr(align)` attribute: not a power of two
  --> $DIR/repr-align.rs:21:14
   |
LL | #[repr(align(0))]
   |              ^

error[E0589]: invalid `repr(align)` attribute: not an unsuffixed integer
  --> $DIR/repr-align.rs:27:14
   |
LL | #[repr(align(16.0))]
   |              ^^^^

error[E0589]: invalid `repr(align)` attribute: not a power of two
  --> $DIR/repr-align.rs:30:14
   |
LL | #[repr(align(15))]
   |              ^^

error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> $DIR/repr-align.rs:33:14
   |
LL | #[repr(align(4294967296))]
   |              ^^^^^^^^^^

error[E0589]: invalid `repr(align)` attribute: not a power of two
  --> $DIR/repr-align.rs:40:14
   |
LL | #[repr(align(0))]
   |              ^

error[E0589]: invalid alignment value: not an unsuffixed integer
  --> $DIR/repr-align.rs:46:9
   |
LL | #[align(16.0)]
   |         ^^^^

error[E0589]: invalid alignment value: not a power of two
  --> $DIR/repr-align.rs:49:9
   |
LL | #[align(15)]
   |         ^^

error[E0589]: invalid alignment value: larger than 2^29
  --> $DIR/repr-align.rs:52:9
   |
LL | #[align(4294967296)]
   |         ^^^^^^^^^^

error[E0589]: invalid alignment value: not a power of two
  --> $DIR/repr-align.rs:59:9
   |
LL | #[align(0)]
   |         ^

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0589`.
